# rotation-copilot

./: Cargo.toml  README.md
admin/: dashboard.html
src/: account_store.rs  main.rs  state.rs
src/routes/: admin.rs  mod.rs  proxy.rs
src/services/: copilot.rs  github.rs  mod.rs
