[package]
name = "rotation-copilot"
version = "1.0.0"
edition = "2021"
description = "Multi-account GitHub Copilot proxy with round-robin rotation, OpenAI/Anthropic compatible API"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
bytes = "1"

# File paths
dirs = "6"

# Native window (for --desktop mode)
wry = "0.49"
tao = { version = "0.33", features = ["rwh_06"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
